# sdk

./: Cargo.toml  README.md
examples/cmc/: Cargo.toml  spin.toml
examples/cmc/src/: lib.rs
examples/revolut/: Cargo.toml  spin.toml
examples/yahoo/: Cargo.toml  spin.toml
macro/: Cargo.toml
macro/src/: lib.rs
src/: lib.rs  oracle.rs
wit/: blocksense-oracle.wit
